# SFMLPokedex

./: .gitignore  App.cpp  App.h  AppHandler.cpp  AppHandler.h  CMakeLists.txt  README.md  SFMLPokedex.cpp  SFMLPokedex.h  SFMLPokedexEnums.h  Screen.cpp  Screen.h  main.cpp  multitext-main
AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.h
Button/: GridButton.cpp  GridButton.h  TileButton.cpp  TileButton.h
Components/: ButtonInterface.h  Component.h  ContainerInterface.h  EventHandable.h  EventHandler.h  GUIComponent.h  PokemonScreenInterface.h  Updateable.h
Container/: Container.cpp  Container.h
Data/: PokemonList.cpp  PokemonList.h  PokemonStruct.h
Dropdown/: Dropdown.cpp  Dropdown.h  DropdownItem.cpp  DropdownItem.h
FileTree/: FileHelper.cpp  FileHelper.h  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h
FileTree/NaryTree/: NaryTree.cpp  NaryTree.h  TreeNode.h
Files/Folder1/: file.pok
Files/Folder2/: mew.pok
Files/Folder3/folder24/: blastoise.pok
Font/: Font.cpp  Font.h
Helper/: HelperFunctions.cpp  HelperFunctions.h
History/: History.cpp  History.h  HistoryNode.h
Images/: Images.cpp  Images.h
Input/: Input.cpp  Input.h
Item/: Item.cpp  Item.h  ItemList.cpp  ItemList.h  ItemStruct.h
KeyShortcuts/: KeyShortcuts.cpp  KeyShortcuts.h
Label/: Label.cpp  Label.h
Layout/: Layout.cpp  Layout.h
Layout/MainScreen/: MainScreen.cpp  MainScreen.h
Layout/MainScreen/MainScreenButton/: MainScreenButton.cpp  MainScreenButton.h
Layout/MainScreen/Views/: GridView.cpp  GridView.h  TileView.cpp  TileView.h
Layout/PokemonScreen/: PokemonScreen.cpp  PokemonScreen.h
Layout/SearchInput/: SearchInput.cpp  SearchInput.h
Layout/SideMenu/: SideMenu.cpp
Letter/: Letter.cpp  Letter.h
MenuBar/: Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  MenuOptionsEnum.h
MouseEvents/: MouseEvents.cpp  MouseEvents.h
MultiText/: MultiText.cpp  MultiText.h  MultiTextIterator.cpp  MultiTextIterator.h
Pokemon/: Pokemon.cpp  Pokemon.h
Screen/: Screen.cpp  Screen.h  ScreenEnum.h  ScreenHandler.cpp  ScreenHandler.h
Screen/EditMode/: EditMode.cpp  EditMode.h
Screen/FileTreeScreen/: FileTreeScreen.cpp  FileTreeScreen.h
Screen/Home/: Home.cpp  Home.h
Screen/Home/Views/: GridView.cpp  GridView.h
Screen/HomeScreen/: HomeScreen.cpp  HomeScreen.h
Screen/Logo/: Logo.cpp  Logo.h
Screen/MainScreenButton/: MainScreenButton.cpp  MainScreenButton.h
Screen/PokemonScreen/: PokemonScreen.cpp  PokemonScreen.h
Screen/PokemonScreen/Elements/: Content.cpp  Content.h  Description.cpp  Description.h  Evolutions.cpp  Evolutions.h  Header.cpp  Header.h  PokemonType.cpp  PokemonType.h  PokemonWeakness.cpp  PokemonWeakness.h  SpriteDisplay.cpp  SpriteDisplay.h
Screen/SearchInput/: SearchInput.cpp  SearchInput.h  SearchItem.cpp  SearchItem.h
Screen/SideMenu/: SideMenu.cpp  SideMenu.h
Snapshot/: Snapshot.cpp  Snapshot.h
SoundFX/: SoundFX.cpp  SoundFX.h
StateManager/: PokemonManager.cpp  PokemonManager.h
States/: States.cpp  States.h  statesEnum.h
Text/: Text.cpp  Text.h
TextField/: TextField.cpp  TextField.h
TextInput/: Actions.h  TextInput.cpp  TextInput.h
Typing/: Typing.cpp  Typing.h
Undo/: Actions.h  Undo.cpp  Undo.h
backup/Folder3/: mewtwo.pok
