cmake_minimum_required(VERSION 3.26)
project(sfmlTemplate)

set(CMAKE_CXX_STANDARD 17)

add_executable(sfmlTemplate main.cpp
        App.cpp
        App.h
        Input/Input.cpp
        Input/Input.h
        Screen/Screen.cpp
        Screen/Screen.h
        Font/Font.cpp
        Font/Font.h
        Components/GUIComponent.h
        Components/EventHandler.h
        MultiText/MultiText.cpp
        Letter/Letter.cpp
        Letter/Letter.h
        MultiText/MultiTextIterator.cpp
        MultiText/MultiTextIterator.h
        Typing/Typing.h
        Typing/Typing.cpp
        TextInput/TextInput.cpp
        TextInput/TextInput.h
        History/HistoryNode.h
        History/History.cpp
        History/History.h
        Snapshot/Snapshot.cpp
        Snapshot/Snapshot.h
        Label/Label.cpp
        Label/Label.h
        States/States.cpp
        States/States.h
        States/statesEnum.h
        KeyShortcuts/KeyShortcuts.cpp
        KeyShortcuts/KeyShortcuts.h
        MouseEvents/MouseEvents.cpp
        MouseEvents/MouseEvents.h
        Item/Item.cpp
        Item/Item.h
        Item/ItemList.cpp
        Item/ItemList.h
        Helper/HelperFunctions.cpp
        Helper/HelperFunctions.h
        Dropdown/Dropdown.cpp
        Dropdown/Dropdown.h
        SoundFX/SoundFX.cpp
        SoundFX/SoundFX.h
        Item/ItemStruct.h
        Screen/Home/Home.cpp
        Screen/Home/Home.h
        Screen/PokemonScreen/PokemonScreen.cpp
        Screen/PokemonScreen/PokemonScreen.h
        Screen/SearchInput/SearchInput.cpp
        Screen/SearchInput/SearchInput.h
        Screen/SideMenu/SideMenu.cpp
        Screen/SideMenu/SideMenu.h
        Images/Images.cpp
        Images/Images.h
        AnimatedSprite/AnimatedSprite.cpp
        AnimatedSprite/AnimatedSprite.h
        Screen/Home/Views/GridView.cpp
        Screen/Home/Views/GridView.h
        Button/GridButton.cpp
        Button/GridButton.h
        Button/TileButton.cpp
        Button/TileButton.h
        Screen/Logo/Logo.cpp
        Screen/Logo/Logo.h
        Components/ButtonInterface.h
        Screen/MainScreenButton/MainScreenButton.cpp
        Screen/MainScreenButton/MainScreenButton.h
        StateManager/PokemonManager.cpp
        StateManager/PokemonManager.h
        Data/PokemonStruct.h
        Data/PokemonList.cpp
        Data/PokemonList.h
        SFMLPokedex.cpp
        SFMLPokedex.h
        Container/Container.cpp
        Container/Container.h
        Text/Text.cpp
        Text/Text.h
        SFMLPokedexEnums.h
        Screen/ScreenEnum.h
        Screen/ScreenHandler.cpp
        Screen/ScreenHandler.h
        Screen/PokemonScreen/Elements/Header.cpp
        Screen/PokemonScreen/Elements/Header.h
        Screen/EditMode/EditMode.cpp
        Screen/EditMode/EditMode.h
        Screen/PokemonScreen/Elements/SpriteDisplay.cpp
        Screen/PokemonScreen/Elements/SpriteDisplay.h
        Screen/PokemonScreen/Elements/Description.cpp
        Screen/PokemonScreen/Elements/Description.h
        Screen/PokemonScreen/Elements/Content.cpp
        Screen/PokemonScreen/Elements/Content.h
        Screen/PokemonScreen/Elements/Evolutions.cpp
        Screen/PokemonScreen/Elements/Evolutions.h
        Screen/PokemonScreen/Elements/PokemonWeakness.cpp
        Screen/PokemonScreen/Elements/PokemonWeakness.h
        Screen/PokemonScreen/Elements/PokemonType.cpp
        Screen/PokemonScreen/Elements/PokemonType.h)
target_link_libraries(sfmlTemplate sfml-graphics sfml-audio)

find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)